--- a/package.json
+++ b/package.json
@@ -23,11 +23,31 @@
         "name": "Kevin Sun"
     },
     "license": "MIT",
+    "activationEvents": [
+        "*"
+    ],
+    "main": "./out/extension.js",
     "contributes": {
+        "configuration": {
+            "title": "HarmonyLang",
+            "properties": {
+                "harmonylang.location": {
+                    "type": ["string", "null"],
+                    "default": null,
+                    "scope": "machine-overridable",
+                    "description": "Specifies the folder path containing the Harmony compiler."
+                }
+            }
+        },
         "languages": [{
             "id": "harmony",
-            "aliases": ["Harmony", "harmony"],
-            "extensions": [".hny"],
+            "aliases": [
+                "Harmony",
+                "harmony"
+            ],
+            "extensions": [
+                ".hny"
+            ],
             "configuration": "./language-configuration.json"
         }],
         "grammars": [{
@@ -36,8 +56,22 @@
             "path": "./syntaxes/harmony.tmLanguage.json"
         }],
         "commands": [{
-            "command": "extension.runharmony",
-            "title": "Run Harmony Program"
+            "command": "harmonylang.run",
+            "title": "Run Harmony File"
         }]
+    },
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "lint": "eslint . --ext .ts,.tsx",
+        "watch": "tsc -watch -p ./"
+    },
+    "devDependencies": {
+        "@types/node": "^12.12.0",
+        "@types/vscode": "^1.34.0",
+        "@typescript-eslint/eslint-plugin": "^3.0.2",
+        "@typescript-eslint/parser": "^3.0.2",
+        "eslint": "^7.1.0",
+        "typescript": "^3.9.4"
     }
 }
