Add default keybinding to run harmony. ctrl+shift+n. ctrl+shift+r's already taken by the refactor command

--- a/package.json
+++ b/package.json
@@ -67,6 +67,12 @@
                 "command": "harmonylang.run",
                 "title": "Run Harmony"
             }
+        ],
+        "keybindings": [
+            {
+                "command": "harmonylang.run",
+                "key": "ctrl+shift+n"
+            }
         ]
     },
     "scripts": {
