--- a/package.json
+++ b/package.json
@@ -28,23 +28,28 @@
     ],
     "main": "./out/extension.js",
     "contributes": {
-        "languages": [{
-            "id": "harmony",
-            "aliases": [
-                "Harmony",
-                "harmony"
-            ],
-            "extensions": [
-                ".hny"
-            ],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "harmony",
-            "scopeName": "source.harmony",
-            "path": "./syntaxes/harmony.tmLanguage.json"
-        }],
-        "commands": [{
+        "languages": [
+            {
+                "id": "harmony",
+                "aliases": [
+                    "Harmony",
+                    "harmony"
+                ],
+                "extensions": [
+                    ".hny"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "harmony",
+                "scopeName": "source.harmony",
+                "path": "./syntaxes/harmony.tmLanguage.json"
+            }
+        ],
+        "commands": [
+            {
                 "command": "harmonylang.run",
                 "title": "Run Harmony"
             },
@@ -61,7 +66,8 @@
                 "title": "Remove `harmony` CLI"
             }
         ],
-        "keybindings": [{
+        "keybindings": [
+            {
                 "command": "harmonylang.run",
                 "key": "alt+shift+n"
             },
@@ -79,15 +85,17 @@
         "clean": "rm -rf out"
     },
     "devDependencies": {
-        "@types/node": "^12.12.0",
+        "@types/node": "^12.12.68",
+        "@types/typescript": "^2.0.0",
         "@types/vscode": "^1.34.0",
         "@typescript-eslint/eslint-plugin": "^3.0.2",
         "@typescript-eslint/parser": "^3.0.2",
         "eslint": "^7.1.0",
-        "typescript": "^3.9.4"
+        "typescript": "^3.9.7"
     },
     "dependencies": {
         "@types/rimraf": "^3.0.0",
+        "node": "^14.14.0",
         "rimraf": "^3.0.2"
     }
 }
