--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es2019",
+        "target": "ES2019",
         "lib": ["ES2019"],
         "outDir": "out",
         "sourceMap": true,
