--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
         "clean": "rm -rf out"
     },
     "devDependencies": {
+        "@types/create-html-element": "^2.1.0",
         "@types/node": "^12.12.68",
         "@types/typescript": "^2.0.0",
         "@types/vscode": "^1.34.0",
@@ -95,7 +96,9 @@
     },
     "dependencies": {
         "@types/rimraf": "^3.0.0",
+        "create-html-element": "^3.0.0",
         "node": "^14.14.0",
+        "node-html-parser": "^2.0.0",
         "rimraf": "^3.0.2"
     }
 }
