--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
         "compile": "tsc -p ./",
         "lint": "eslint . --ext .ts,.tsx",
         "watch": "tsc -watch -p ./",
-        "clean": "rm -rf out"
+        "clean": "rm -rf out",
+        "update-harmony": "node update_harmony.js"
     },
     "devDependencies": {
         "@types/create-html-element": "^2.1.0",
@@ -91,6 +92,8 @@
         "@types/vscode": "^1.34.0",
         "@typescript-eslint/eslint-plugin": "^3.0.2",
         "@typescript-eslint/parser": "^3.0.2",
+        "axios": "^0.21.0",
+        "dotenv": "^8.2.0",
         "eslint": "^7.1.0",
         "typescript": "^3.9.7"
     },
