--- a/package.json
+++ b/package.json
@@ -83,11 +83,15 @@
         "lint": "eslint . --ext .ts,.tsx",
         "watch": "tsc -watch -p ./",
         "clean": "rm -rf out",
-        "update-harmony": "node update_harmony.js"
+        "update-harmony": "node update_harmony.js",
+        "test": "mocha -r ts-node/register tests/**/*.test.ts"
     },
     "devDependencies": {
+        "@types/chai": "^4.2.14",
         "@types/create-html-element": "^2.1.0",
-        "@types/node": "^12.12.68",
+        "@types/mocha": "^8.2.0",
+        "@types/node": "^12.19.11",
+        "@types/rimraf": "^3.0.0",
         "@types/typescript": "^2.0.0",
         "@types/vscode": "^1.34.0",
         "@typescript-eslint/eslint-plugin": "^3.0.2",
@@ -98,9 +102,10 @@
         "typescript": "^3.9.7"
     },
     "dependencies": {
-        "@types/rimraf": "^3.0.0",
+        "chai": "^4.2.0",
         "create-html-element": "^3.0.0",
-        "node": "^14.14.0",
+        "mocha": "^8.2.1",
+        "node": "^15.4.0",
         "node-html-parser": "^2.0.0",
         "rimraf": "^3.0.2"
     }
