--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     },
     "devDependencies": {
         "@types/chai": "^4.2.14",
+        "@types/command-exists": "^1.2.0",
         "@types/create-html-element": "^2.1.0",
         "@types/lodash": "^4.14.168",
         "@types/mocha": "^8.2.0",
@@ -104,6 +105,7 @@
     },
     "dependencies": {
         "chai": "^4.2.0",
+        "command-exists": "^1.2.9",
         "create-html-element": "^3.0.0",
         "lodash": "^4.17.20",
         "mocha": "^8.2.1",
