--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "HarmonyLang",
     "description": "VS Code language support for Harmony, a Python-like concurrent programming language.",
     "icon": "images/harmonylang.png",
-    "version": "0.0.6",
+    "version": "0.2.0",
     "publisher": "kevinsun-dev-cornell",
     "repository": "https://github.com/kevinsun-dev/harmonylang",
     "engines": {
@@ -28,28 +28,40 @@
     ],
     "main": "./out/extension.js",
     "contributes": {
-        "languages": [
-            {
-                "id": "harmony",
-                "aliases": [
-                    "Harmony",
-                    "harmony"
-                ],
-                "extensions": [
-                    ".hny"
-                ],
-                "configuration": "./language-configuration.json"
+        "configuration": {
+            "title": "HarmonyLang",
+            "properties": {
+                "harmonylang.pythonPath": {
+                    "type": "string",
+                    "scope": "machine-overridable",
+                    "default": "python3",
+                    "description": "Python 3 installation path"
+                },
+                "harmonylang.ccPath": {
+                    "type": "string",
+                    "scope": "machine-overridable",
+                    "default": "cc",
+                    "description": "C Compiler installation path"
+                }
             }
-        ],
-        "grammars": [
-            {
-                "language": "harmony",
-                "scopeName": "source.harmony",
-                "path": "./syntaxes/harmony.tmLanguage.json"
-            }
-        ],
-        "commands": [
-            {
+        },
+        "languages": [{
+            "id": "harmony",
+            "aliases": [
+                "Harmony",
+                "harmony"
+            ],
+            "extensions": [
+                ".hny"
+            ],
+            "configuration": "./language-configuration.json"
+        }],
+        "grammars": [{
+            "language": "harmony",
+            "scopeName": "source.harmony",
+            "path": "./syntaxes/harmony.tmLanguage.json"
+        }],
+        "commands": [{
                 "command": "harmonylang.run",
                 "title": "Run Harmony"
             },
@@ -66,8 +78,7 @@
                 "title": "Remove `harmony` CLI"
             }
         ],
-        "keybindings": [
-            {
+        "keybindings": [{
                 "command": "harmonylang.run",
                 "key": "alt+shift+n"
             },
