Updated the Extension

--- a/package.json
+++ b/package.json
@@ -51,23 +51,28 @@
                 }
             }
         },
-        "languages": [{
-            "id": "harmony",
-            "aliases": [
-                "Harmony",
-                "harmony"
-            ],
-            "extensions": [
-                ".hny"
-            ],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "harmony",
-            "scopeName": "source.harmony",
-            "path": "./syntaxes/harmony.tmLanguage.json"
-        }],
-        "commands": [{
+        "languages": [
+            {
+                "id": "harmony",
+                "aliases": [
+                    "Harmony",
+                    "harmony"
+                ],
+                "extensions": [
+                    ".hny"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "harmony",
+                "scopeName": "source.harmony",
+                "path": "./syntaxes/harmony.tmLanguage.json"
+            }
+        ],
+        "commands": [
+            {
                 "command": "harmonylang.run",
                 "title": "Run Harmony"
             },
@@ -84,7 +89,8 @@
                 "title": "Remove `harmony` CLI"
             }
         ],
-        "keybindings": [{
+        "keybindings": [
+            {
                 "command": "harmonylang.run",
                 "key": "alt+shift+n"
             },
