--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "target": "ES2019",
         "lib": ["ES2019"],
         "outDir": "out",
-        "sourceMap": false,
+        "sourceMap": true,
         "strict": true
     },
     "exclude": [
