Add a build script in package.json

--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
+        "build": "vsce package",
         "compile": "tsc -p ./",
         "lint": "eslint . --ext .ts,.tsx",
         "watch": "tsc -watch -p ./",
