--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "harmonylang",
-    "displayName": "HarmonyLang",
+    "name": "harmonylang-beta",
+    "displayName": "HarmonyLang Beta",
     "description": "VS Code language support for Harmony, a Python-like concurrent programming language.",
     "icon": "images/harmonylang.png",
-    "version": "0.1.3",
+    "version": "0.2.2",
     "publisher": "kevinsun-dev-cornell",
     "repository": "https://github.com/kevinsun-dev/harmonylang",
     "engines": {
@@ -28,6 +28,29 @@
     ],
     "main": "./out/extension.js",
     "contributes": {
+        "configuration": {
+            "title": "HarmonyLang",
+            "properties": {
+                "harmonylang-beta.pythonPath": {
+                    "type": [
+                        "string",
+                        "null"
+                    ],
+                    "scope": "machine-overridable",
+                    "default": null,
+                    "description": "Python 3 installation path"
+                },
+                "harmonylang-beta.ccPath": {
+                    "type": [
+                        "string",
+                        "null"
+                    ],
+                    "scope": "machine-overridable",
+                    "default": null,
+                    "description": "C Compiler installation path"
+                }
+            }
+        },
         "languages": [
             {
                 "id": "harmony",
@@ -50,51 +73,69 @@
         ],
         "commands": [
             {
-                "command": "harmonylang.run",
+                "command": "harmonylang-beta-server.run",
+                "title": "(Server) Run Harmony"
+            },
+            {
+                "command": "harmonylang-beta.run",
                 "title": "Run Harmony"
             },
             {
-                "command": "harmonylang.end",
+                "command": "harmonylang-beta.end",
                 "title": "End All Harmony Processes"
-            },
-            {
-                "command": "harmonylang.install",
-                "title": "Add `harmony` to PATH"
-            },
-            {
-                "command": "harmonylang.uninstall​​",
-                "title": "Remove `harmony` CLI"
             }
         ],
         "keybindings": [
             {
-                "command": "harmonylang.run",
+                "command": "harmonylang-beta.run",
                 "key": "alt+shift+n"
             },
             {
-                "command": "harmonylang.end",
+                "command": "harmonylang-beta.end",
                 "key": "alt+shift+q"
             }
         ]
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
+        "build": "vsce package",
         "compile": "tsc -p ./",
         "lint": "eslint . --ext .ts,.tsx",
         "watch": "tsc -watch -p ./",
-        "clean": "rm -rf out"
+        "clean": "rm -rf out",
+        "update-harmony": "./update_harmony.sh",
+        "test": "mocha -r ts-node/register tests/**/*.test.ts"
     },
     "devDependencies": {
-        "@types/node": "^12.12.68",
-        "@types/typescript": "^2.0.0",
+        "@types/adm-zip": "^0.4.33",
+        "@types/chai": "^4.2.14",
+        "@types/command-exists": "^1.2.0",
+        "@types/create-html-element": "^2.1.0",
+        "@types/glob": "^7.1.3",
+        "@types/lodash": "^4.14.168",
+        "@types/mocha": "^8.2.0",
+        "@types/node": "^12.19.11",
+        "@types/rimraf": "^3.0.0",
+        "@types/tmp": "^0.2.0",
         "@types/vscode": "^1.34.0",
         "@typescript-eslint/eslint-plugin": "^3.0.2",
         "@typescript-eslint/parser": "^3.0.2",
-        "eslint": "^7.1.0",
-        "typescript": "^3.9.7"
+        "axios": "^0.21.0",
+        "eslint": "^7.1.0"
     },
     "dependencies": {
-        "@types/rimraf": "^3.0.0",
-        "rimraf": "^3.0.2"
+        "adm-zip": "^0.5.2",
+        "chai": "^4.2.0",
+        "command-exists": "^1.2.9",
+        "create-html-element": "^3.0.0",
+        "dotenv": "^8.2.0",
+        "form-data": "^3.0.0",
+        "glob": "^7.1.6",
+        "lodash": "^4.17.20",
+        "mocha": "^8.2.1",
+        "node-html-parser": "^2.1.0",
+        "rimraf": "^3.0.2",
+        "tmp": "^0.2.1",
+        "typescript": "^4.1.3"
     }
 }
