--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,11 @@
         "lib": ["ES2019"],
         "outDir": "out",
         "sourceMap": true,
-        "strict": true,
-        "rootDir": "src"
+        "strict": true
     },
-    "exclude": ["node_modules", ".vscode-test"]
+    "exclude": [
+        "node_modules",
+        ".vscode-test",
+        "tests"
+    ]
 }
