--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
         "@types/chai": "^4.2.14",
         "@types/command-exists": "^1.2.0",
         "@types/create-html-element": "^2.1.0",
+        "@types/glob": "^7.1.3",
         "@types/lodash": "^4.14.168",
         "@types/mocha": "^8.2.0",
         "@types/node": "^12.19.11",
@@ -129,6 +130,7 @@
         "create-html-element": "^3.0.0",
         "dotenv": "^8.2.0",
         "form-data": "^3.0.0",
+        "glob": "^7.1.6",
         "lodash": "^4.17.20",
         "mocha": "^8.2.1",
         "node-html-parser": "^2.1.0",
