--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "HarmonyLang",
     "description": "VS Code language support for Harmony, a Python-like concurrent programming language.",
     "icon": "images/harmonylang.png",
-    "version": "0.2.3",
+    "version": "0.2.4",
     "publisher": "kevinsun-dev-cornell",
     "repository": "https://github.com/kevinsun-dev/harmonylang",
     "engines": {
@@ -119,9 +119,7 @@
         "@types/tmp": "^0.2.0",
         "@types/vscode": "^1.34.0",
         "@typescript-eslint/eslint-plugin": "^3.0.2",
-        "@typescript-eslint/parser": "^3.0.2",
-        "axios": "^0.21.1",
-        "eslint": "^7.1.0"
+        "@typescript-eslint/parser": "^3.0.2"
     },
     "dependencies": {
         "adm-zip": "^0.5.2",
