--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "devDependencies": {
         "@types/adm-zip": "^0.4.33",
         "@types/chai": "^4.2.14",
+        "@types/chmodr": "^1.0.0",
         "@types/command-exists": "^1.2.0",
         "@types/create-html-element": "^2.1.0",
         "@types/glob": "^7.1.3",
@@ -125,6 +126,7 @@
         "adm-zip": "^0.5.2",
         "axios": "^0.21.1",
         "chai": "^4.2.0",
+        "chmodr": "^1.2.0",
         "command-exists": "^1.2.9",
         "create-html-element": "^3.0.0",
         "dotenv": "^8.2.0",
