--- a/package.json
+++ b/package.json
@@ -91,6 +91,10 @@
                 "key": "alt+shift+n"
             },
             {
+                "command": "harmonylang-server.run",
+                "key": "alt+shift+s"
+            },
+            {
                 "command": "harmonylang.end",
                 "key": "alt+shift+q"
             }
