--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
         "node-html-parser": "^2.1.0",
         "rimraf": "^3.0.2",
         "tmp": "^0.2.1",
-        "typescript": "^4.1.3"
+        "typescript": "^4.1.3",
+        "vsce": "^1.87.1"
     }
 }
