--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     },
     "devDependencies": {
         "@types/adm-zip": "^0.4.33",
+        "@types/argparse": "^2.0.5",
         "@types/chai": "^4.2.14",
         "@types/chmodr": "^1.0.0",
         "@types/command-exists": "^1.2.0",
@@ -138,6 +139,7 @@
     },
     "dependencies": {
         "adm-zip": "^0.5.2",
+        "argparse": "^2.0.1",
         "axios": "^0.21.1",
         "chai": "^4.2.0",
         "chmodr": "^1.2.0",
@@ -150,6 +152,7 @@
         "mocha": "^8.2.1",
         "node-html-parser": "^2.1.0",
         "rimraf": "^3.0.2",
+        "string-argv": "^0.3.1",
         "tmp": "^0.2.1",
         "typescript": "^4.1.3",
         "vsce": "^1.87.1"
