--- a/package.json
+++ b/package.json
@@ -81,6 +81,14 @@
                 "title": "Run Harmony"
             },
             {
+                "command": "harmonylang-server-flag.run",
+                "title": "(Server) Run Harmony With Flags"
+            },
+            {
+                "command": "harmonylang-flag.run",
+                "title": "Run Harmony With Flags"
+            },
+            {
                 "command": "harmonylang.end",
                 "title": "End All Harmony Processes"
             }
@@ -125,7 +133,8 @@
         "@types/tmp": "^0.2.0",
         "@types/vscode": "^1.34.0",
         "@typescript-eslint/eslint-plugin": "^3.0.2",
-        "@typescript-eslint/parser": "^3.0.2"
+        "@typescript-eslint/parser": "^3.0.2",
+        "eslint": "^7.24.0"
     },
     "dependencies": {
         "adm-zip": "^0.5.2",
