--- a/.github/workflows/publish-extension.yml
+++ b/.github/workflows/publish-extension.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - name: Publish extension
+        if: success() && ${{ secrets.VSCE_PAT }}
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
         run: |
