--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,6 +17,4 @@ tsconfig.json
 debug/**
 **/*.hny
 update-harmony.sh
-harmony-master/charm.json
-harmony-master/charm.c
-harmony-master/charm.html
+harmony-master/
