--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
         "command-exists": "^1.2.9",
         "create-html-element": "^3.0.0",
         "dotenv": "^8.2.0",
+        "file-uri-to-path": "^2.0.0",
         "form-data": "^3.0.0",
         "glob": "^7.1.6",
         "lodash": "^4.17.20",
@@ -151,6 +152,9 @@
         "rimraf": "^3.0.2",
         "string-argv": "^0.3.1",
         "tmp": "^0.2.1",
-        "typescript": "^4.1.3"
+        "typescript": "^4.1.3",
+        "vscode-languageclient": "^7.0.0",
+        "vscode-languageserver": "^7.0.0",
+        "vscode-languageserver-textdocument": "^1.0.1"
     }
 }
