--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "HarmonyLang",
     "description": "VS Code language support for Harmony, a Python-like concurrent programming language.",
     "icon": "images/harmonylang.png",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "publisher": "kevinsun-dev-cornell",
     "repository": "https://github.com/kevinsun-dev/harmonylang",
     "engines": {
@@ -146,6 +146,7 @@
         "file-uri-to-path": "^2.0.0",
         "form-data": "^3.0.0",
         "glob": "^7.1.6",
+        "is-online": "^9.0.1",
         "lodash": "^4.17.20",
         "mocha": "^8.2.1",
         "node-html-parser": "^2.1.0",
