add hover support

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "*"
     ],
     "main": "./out/extension.js",
+    "capabilities": {
+        "hoverProvider" : "true"
+    },
     "contributes": {
         "configuration": {
             "title": "HarmonyLang",
