--- a/language-configuration.json
+++ b/language-configuration.json
@@ -26,8 +26,10 @@
         ["\"", "\""],
         ["'", "'"]
     ],
-    "indentationRules": {
-        "increaseIndentPattern": "\\b((while.+)|(for.+)|(atomically\\s*)|(def.+)|(if.+\\s*)|(else\\s*)|(let.+))\\:\\s*",
-        "decreaseIndentPattern": "(((?!.*?\\/\\*).*\\*/)?\\s*[\\)\\}\\]].*)\\s*$"
-    }
+    "onEnterRules": [
+		{
+			"beforeText": "^\\s*((?:def|for|if|elif|else|while|atomically|let|when).*?|[a-zA-Z0-9]+\\s*):\\s*$",
+			"action": { "indent": "indent" }
+		}
+	]
 }
