--- a/.github/workflows/publish-extension.yml
+++ b/.github/workflows/publish-extension.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Check if new version was published using package.json
         run: |
           PREV_VERSION=$(git show ${{ github.event.before }}:package.json | jq '.version')
-          NEW_VERSION=$(git show ${{ github.event.base_ref }}:package.json | jq '.version')
+          NEW_VERSION=$(git show HEAD:package.json | jq '.version')
           diff <(echo $PREV_VERSION) <(echo $NEW_VERSION)
       - name: Publish extension
         if: success() && env.VSCE_PAT != null
